--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopping-cart",
-  "homepage": "https://aaadev32.github.io/Shopping-Cart/",
+  "homepage": "https://aaadev32.github.io/Shopping-Cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
